# comforticons

./: .gitignore  LICENCE2  README.md  pyproject.toml
comforticons/: __init__.py  __main__.py  main.py
comforticons/generators/: base.py  image.py  text.py
comforticons/preprocessors/: base.py  hash.py
